<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page_Register"
    android:background="@color/colorWhite"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="30dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    style="@style/viewParent.headerText.NoMode"
                    android:textColor="@color/black"
                    android:text="Voici votre \npremier pas \navec nous ! "/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_register_hero"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
<!--            android:src="@mipmap/ic_logo_work_foreground"-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:drawableStart="@drawable/ic_person_gray_24dp"
                            android:inputType="textPersonName"
                            android:textSize="20dp"
                            android:maxLines="1"
                            android:hint="@string/login_nom"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputRepertoire"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editTextRepertoire"
                            style="@style/modifiedEditText"
                            android:textSize="20dp"
                            android:drawableStart="@drawable/ic_repertoire_addresee_24dp"
                            android:inputType="number"
                            android:maxLines="1"
                            android:hint="@string/login_repertoire"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:textSize="20dp"
                            android:drawableStart="@drawable/ic_email_24dp"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:hint="Email"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMotDePasse"
                        style="@style/parent"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleDrawable="@drawable/show_password_selector"

                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editMotDePasse"
                            style="@style/modifiedEditText"
                            android:textSize="20dp"
                            android:drawableStart="@drawable/ic_lock_gray_24dp"
                            android:maxLines="1"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputConfirmerMotDePasse"
                        style="@style/parent"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleDrawable="@drawable/show_password_selector"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editTextConfirmerMotDePasse"
                            style="@style/modifiedEditText"
                            android:drawableStart="@drawable/ic_lock_gray_24dp"
                            android:textSize="20dp"
                            android:hint="@string/login_confirm_password_hint"
                            android:maxLines="1"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        android:onClick="signUserUpBtnClicked"
                        android:text="Enregistrer"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                       />

                    <TextView
                        style="@style/parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:text="@string/signup_login_hint"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="onLoginClick"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:onClick="onLoginClick"
        android:src="@drawable/ic_back_img" />
</RelativeLayout>