<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.login_signup.Page_Login"
    tools:openDrawer="start">
    

<RelativeLayout
    style="@style/parent"
   >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                app:navigationIcon="@drawable/ic_menu"
                android:background="@drawable/searchview"
                android:elevation="2dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    style="@style/viewParent.headerText.NoMode"
                    android:text="Vous avez \ndéjà un \ncompte? \nConnecter"/>
<!--                   android:text="@string/signup_login_hint"-->


                <ImageView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_login_hero"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:textSize="23dp"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:hint="@string/login_email_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:textSize="23dp"
                    android:hint="@string/login_password_hint"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/viewParent"
                android:text="Forgot Password?"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/newsMoreTextSize"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"/>x

            <Button
                android:id="@+id/cirLoginButton"
                style="@style/loginButton"
                android:onClick="SignInBtnClicked"
                android:text="Connecter"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                />

            <TextView
                style="@style/parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="17sp"
                android:text="@string/login_signup_hint"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:onClick="NavigateToSingUp"/>

        </LinearLayout>
    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_img"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:onClick="NavigateToSingUp1"
        tools:ignore="OnClick" />
</RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_marginTop="35dp"
        android:fitsSystemWindows="true"
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemTextColor="@drawable/selector"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/preference_menu"
        />
</androidx.drawerlayout.widget.DrawerLayout>